--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
     <meta content="telephone=no" name="format-detection"/>
     <!-- 引入自适应类库 -->
-    <script src="//unpkg.com/vue-ydui/dist/ydui.flexible.js"></script>
+    <script src="static/ydui.flexible.js"></script>
     <script src="//at.alicdn.com/t/font_503909_gbynh5u1pfk73nmi.js"></script>
     <title>农机牛，农机人自己的论坛</title>
   </head>
